# sarc-governance

./: BENCHMARK.md  BUILD-LOG.md  README.md  persona.md  pyproject.toml
examples/: multi_agent_workflow.py  single_agent_procurement.py
sarc/: agent_loop.py  audit.py  enforcement.py  spec.py
sarc.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_escalation_trace.py  test_hard_constraints.py  test_soft_constraints.py
